[spi] simplify DataTable interface